turmites.lessons.turmites.langtoncolors.LangtonColors.scala.code
def step(rule:Array[Char], colors:Array[Color]) {

def place(couleur:Color, colors:Array[Color]):Int={
	for(i <- 0 to colors.length - 1){
		if colors(i) == couleur{return i}
	}
}

var x = getCouleurSol()
	var y = rule(place(x,colors)
	y match{
		case R => if(x==colors.length - 1){x=0}else{x+=1}
		setCouleurBrosse(colors(place(x)); baisseBrosse; leveBrosse; droite();avance()
		case L => if(x==colors.length - 1){x=0}else{x+=1}
		setCouleurBrosse(colors(place(x)); baisseBrosse; leveBrosse; gauche();avance()

}
